<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#2B3D4D"
        android:paddingTop="16dp"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="Book Details"/>

    <!-- Book Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/book_overview" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <!--Book Name field -->
            <EditText
                android:id="@+id/edit_book_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_name"
                android:inputType="textCapWords" />

            <!-- Book price field -->
            <EditText
                android:id="@+id/edit_book_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_price"
                android:inputType="numberDecimal" />
        </LinearLayout>
    </LinearLayout>

    <!-- Quantity category -->
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:paddingRight="36dp"
            android:paddingEnd="36dp"
            android:text="@string/book_quantity" />

        <Button
            android:id="@+id/decrease_quantity"
            android:textColor="@android:color/holo_red_light"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:text="@string/decrease_quantity" />

        <!-- Book quantity field -->
        <EditText
            android:id="@+id/edit_book_quantity"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_book_quantity"
            android:inputType="number" />

        <Button
            android:id="@+id/increase_quantity"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:text="@string/increase_quantity" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#2B3D4D"
        android:paddingTop="16dp"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="Supplier Details"/>


    <!-- Supplier category -->
    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:paddingRight="36dp"
            android:paddingEnd="36dp"
            android:text="@string/supplier_name" />

        <!-- Supplier Name Input field -->
        <EditText
            android:id="@+id/edit_supplier_name"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_supplier_name"
            android:inputType="textCapWords" />

    </LinearLayout>


    <!-- Supplier Phone-->
    <LinearLayout
        android:id="@+id/container_measurement2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:paddingRight="36dp"
            android:paddingEnd="36dp"
            android:text="@string/supplier_phone" />

        <!-- Supplier Name Input field -->
        <EditText
            android:id="@+id/edit_supplier_phone"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_supplier_phone"
            android:inputType="phone" />

    </LinearLayout>

    <Button
        android:id="@+id/order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:text="@string/order_button"
        android:textColor="@android:color/holo_red_light" />
</LinearLayout>